loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:20: error: ')' expected but '}' found.
  }
  ^